Closed Bug 1040168 Opened 11 years ago Closed 11 years ago

libxul.so linking fails: desktop_capture/differ_block.cc:47: undefined reference to `webrtc::BlockDifference_SSE2_W32()' on non-x86/arm

Categories

(Core :: WebRTC, defect)

PowerPC
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33

People

(Reporter: jbeich, Assigned: jbeich)

References

Details

Attachments

(1 file)

media/webrtc/trunk/webrtc/modules/modules_desktop_capture/Unified_cpp_ules_desktop_capture0.o: In function `webrtc::BlockDifference(unsigned char const*, unsigned char const*, int)': media/webrtc/trunk/webrtc/modules/desktop_capture/differ_block.cc:47: undefined reference to `webrtc::BlockDifference_SSE2_W32(unsigned char const*, unsigned char const*, int)' media/webrtc/trunk/webrtc/modules/desktop_capture/differ_block.cc:47: undefined reference to `webrtc::BlockDifference_SSE2_W32(unsigned char const*, unsigned char const*, int)' /usr/bin/ld: libxul.so: hidden symbol `_ZN6webrtc24BlockDifference_SSE2_W32EPKhS1_i' isn't defined /usr/bin/ld: final link failed: Bad value http://mozillaproject.osuosl.org:8010/builders/runtests/builds/1778/steps/shell/logs/stdio
Attached patch fixSplinter Review
Landry, can you check the patch is enough for powerpc? WebRTC is disabled on sparc (not in whitelist) and I can only test on x86 (i386 and amd64).
Attachment #8458096 - Flags: feedback?(landry)
Comment on attachment 8458096 [details] [diff] [review] fix Review of attachment 8458096 [details] [diff] [review]: ----------------------------------------------------------------- Can you file an upstream issue at webrtc.org with your patch?
Attachment #8458096 - Flags: review+
No unless upstream migrates to a less privacy-invasive hosting. new issue -> sign in -> create account -> use current mail -> "Sorry, we cannot serve your request for a new account at this moment." or "Verify your account" without "No, thanks" button Couple that with CLA signing even for one-off patches. And the codereview tool lacking search for description/commit to find stalled duplicates.
This patch allows me to compile on ppc (linux). (Firefox crashes shortly after startup in FinalizeArenas but I think that is unrelated to this bug)
Even if related there's still benefit in letting buildbot catch other errors (non-x86, non-SPS, non-ION, etc).
Keywords: checkin-needed
I've opened Bug 1041307 for the crash I am seeing it is unrelated to this.
Assignee: nobody → jbeich
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Will try to build m-i tip on ppc with webrtc enabled now that this issue and 1041307 are fixed.
Comment on attachment 8458096 [details] [diff] [review] fix For some reason, m-i tip fails to build for me now on ppc, so i wont be able to comment on the actual issue in this bug for now.....
Attachment #8458096 - Flags: feedback?(landry)
No longer blocks: webrtc_upstream_bugs
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: