Bug 1040168 - Unbreak WebRTC on more archs without SSE2 after bug 983504. r=gcp